--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyper-aqua",
-  "version": "2.0.1",
+  "version": "3.0.0-beta.0",
   "description": "Cool Hyper theme with pastel and blue cocktail",
   "author": "Plusb Preco <plusb21@gmail.com>",
   "main": "index.js",
